--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
 // Navigation Styles here
+
+.header {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px dashed lightgray;
+}
+
+.navigation {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    padding: 2rem 0;
+    width: 100%;
+    max-width: 800px;
+}
