Update global.less for <a> formatting

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins in here
+
+.btn {
+    text-align: center;
+    padding: 1.6rem;
+    background-color: @eastern-blue;
+    color: white;
+    border-radius: 1rem;
+}
