--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+.btn {
+  text-align: center;
+  padding: 1.6rem;
+  background-color: #17A2B8;
+  color: white;
+  border-radius: 1rem;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -159,6 +166,12 @@ p {
   font-size: 1.6rem;
   padding-bottom: 10px;
 }
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  padding: 0.6rem 1.6rem;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -237,15 +250,4 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
-}
-body,
-.conatiner,
-nav,
-div,
-header,
-section,
-footer {
-  border: 1px solid red;
-  padding: 2px;
-  margin: 2px;
 }
