--- a/less/global.less
+++ b/less/global.less
@@ -34,6 +34,13 @@ p {
   padding-bottom: 10px;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  padding: 0.6rem 1.6rem;
+}
+
 img {
   max-width: 100%;
   height: auto;
