--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-.btn {
-  text-align: center;
-  padding: 1.6rem;
-  background-color: #17A2B8;
-  color: white;
-  border-radius: 1rem;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -184,7 +177,7 @@ img {
 .header {
   display: flex;
   justify-content: center;
-  border-bottom: 1px dashed lightgray;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .navigation {
   display: flex;
@@ -193,6 +186,12 @@ img {
   padding: 2rem 0;
   width: 100%;
   max-width: 800px;
+}
+@media (max-width: 500px) {
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .footer {
   width: 100%;
@@ -204,6 +203,11 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .introduction {
+  margin-top: 30px;
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 10px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -250,4 +254,12 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  text-align: center;
+  padding: 1.6rem;
+  background-color: #17A2B8;
+  color: white;
+  border-radius: 1rem;
+  font-size: 1.5rem;
 }
