--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,13 +1,17 @@
 .home {
 
+  .introduction {
+    margin-top: 30px;
+    border-bottom: 2px dashed @navigation-border;
+    padding-bottom: 10px;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -56,6 +60,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .buttonStyle();
+      }
     }
   }
 }// home
