--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,10 @@
 // Mixins in here
 
-.btn {
+.buttonStyle() {
     text-align: center;
     padding: 1.6rem;
     background-color: @eastern-blue;
     color: white;
     border-radius: 1rem;
+    font-size: 1.5rem;
 }
