--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,7 +3,7 @@
 .header {
     display: flex;
     justify-content: center;
-    border-bottom: 1px dashed lightgray;
+    border-bottom: 2px dashed @navigation-border;
 }
 
 .navigation {
@@ -13,5 +13,9 @@
     padding: 2rem 0;
     width: 100%;
     max-width: 800px;
+    @media(max-width: 500px) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
