Add media queries for max-width: 500px

--- a/less/global.less
+++ b/less/global.less
@@ -8,6 +8,7 @@ html {
 
 html, body {
   font-family: 'Roboto', sans-serif;
+
 }
 
 h1, h2, h3, h4, h5 {
@@ -50,4 +51,7 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  @media(max-width: 500px) {
+    padding: 0 20px;
+  }
 }
