--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,18 +11,30 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media(max-width: 500px) {
+      flex-direction: column;
+    }
 
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media(max-width: 500px) {
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media(max-width: 500px) {
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
+        @media(max-width: 500px) {
+          width: 100%;
+        }
       }
     }
   }
@@ -30,6 +42,9 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media(max-width: 500px) {
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -45,6 +60,9 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media(max-width: 500px) {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
@@ -56,10 +74,17 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media(max-width: 500px) {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media(max-width: 500px) {
+        width: 75%;
+      }
 
       .btn {
         .buttonStyle();
