--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,14 +11,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    @media(max-width: 500px) {
+    @media @mobileDevice {
       flex-direction: column;
     }
 
     .text-content {
       width: 48%;
       padding-right: 1%;
-      @media(max-width: 500px) {
+      @media @mobileDevice {
         width: 100%;
       }
     }
@@ -26,13 +26,13 @@
     .img-content {
       width: 48%;
       padding-left: 1%;
-      @media(max-width: 500px) {
+      @media @mobileDevice {
         width: 100%;
       }
 
       img {
         border-radius: 10px;
-        @media(max-width: 500px) {
+        @media @mobileDevice {
           width: 100%;
         }
       }
@@ -42,7 +42,7 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
-    @media(max-width: 500px) {
+    @media @mobileDevice {
       flex-direction: column-reverse;
     }
 
@@ -60,7 +60,7 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-    @media(max-width: 500px) {
+    @media @mobileDevice {
       width: 100%;
     }
 
@@ -74,7 +74,7 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
-    @media(max-width: 500px) {
+    @media @mobileDevice {
       flex-direction: column;
       align-items: center;
     }
@@ -82,7 +82,7 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
-      @media(max-width: 500px) {
+      @media @mobileDevice {
         width: 75%;
       }
 
