--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,10 +1,10 @@
 // Mixins in here
 
-.buttonStyle() {
+.buttonStyle(@fontColor: white) {
     text-align: center;
     padding: 1.6rem;
     background-color: @eastern-blue;
-    color: white;
+    color: @fontColor;
     border-radius: 1rem;
     font-size: 1.5rem;
 }
