--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,7 +13,8 @@
     padding: 2rem 0;
     width: 100%;
     max-width: 800px;
-    @media(max-width: 500px) {
+    
+    @media @mobileDevice {
         flex-direction: column;
         align-items: center;
     }
