--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,19 +16,21 @@
     }
 
     .text-content {
-      width: 48%;
-      padding-right: 1%;
-      @media @mobileDevice {
-        width: 100%;
-      }
+      // width: 48%;
+      // padding-right: 1%;
+      // @media @mobileDevice {
+      //   width: 100%;
+      // }
+      .imgOrText-content();
     }
 
     .img-content {
-      width: 48%;
-      padding-left: 1%;
-      @media @mobileDevice {
-        width: 100%;
-      }
+      // width: 48%;
+      // padding-left: 1%;
+      // @media @mobileDevice {
+      //   width: 100%;
+      // }
+      .imgOrText-content();
 
       img {
         border-radius: 10px;
