--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,3 +8,11 @@
     border-radius: 1rem;
     font-size: 1.5rem;
 }
+
+.imgOrText-content {
+    width: 48%;
+    padding-left: 1%;
+    @media @mobileDevice {
+      width: 100%;
+    }
+}
