Add media break for tabletDevice

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,10 @@
     margin-top: 30px;
     border-bottom: 2px dashed @navigation-border;
     padding-bottom: 10px;
+    @media @tabletDevice {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
   }
 
   .content-section {
@@ -11,6 +15,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media @tabletDevice {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+    
     @media @mobileDevice {
       flex-direction: column;
     }
@@ -62,6 +72,7 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    
     @media @mobileDevice {
       width: 100%;
     }
@@ -76,6 +87,10 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @tabletDevice {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
     @media @mobileDevice {
       flex-direction: column;
       align-items: center;
