--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,6 +13,10 @@
     padding: 2rem 0;
     width: 100%;
     max-width: 800px;
+
+    @media @tabletDevice {
+        padding: 2rem 2rem;
+    }
     
     @media @mobileDevice {
         flex-direction: column;
