--- a/css/index.css
+++ b/css/index.css
@@ -201,6 +201,11 @@ img {
   width: 100%;
   max-width: 800px;
 }
+@media (max-width: 750px) {
+  .navigation {
+    padding: 2rem 2rem;
+  }
+}
 @media (max-width: 500px) {
   .navigation {
     flex-direction: column;
@@ -223,11 +228,23 @@ img {
   border-bottom: 2px dashed #C0C0C0;
   padding-bottom: 10px;
 }
+@media (max-width: 750px) {
+  .home .introduction {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+@media (max-width: 750px) {
+  .home .content-section {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 @media (max-width: 500px) {
   .home .content-section {
@@ -294,6 +311,12 @@ img {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 750px) {
+  .home .content-pick {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 @media (max-width: 500px) {
   .home .content-pick {
